テスト/src/objects/staff_SFO__c.object
<CustomObject>
    <fields>
        <fullName>OJTend__c</fullName>
        <label>OJT終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OJTstart__c</fullName>
        <label>OJT開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OffJTend__c</fullName>
        <label>OffJT終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OffJTstart__c</fullName>
        <label>OffJT開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sys_next_follow_limit__c</fullName>
        <label>【非表示】次回フォロー期限</label>
        <summarizedField>follow_SFO__c.Sys_next_follow_limit__c</summarizedField>
        <summaryForeignKey>follow_SFO__c.staff__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sys_pending_over__c</fullName>
        <formula>IF(MONTH(OJTend__c) &lt; 6 , DATE(YEAR(OJTend__c),MONTH(OJTend__c)+7,1) -1, DATE(YEAR(OJTend__c)+1,MONTH(OJTend__c)-5,1)- 1)</formula>
        <label>【非表示】終了後6ヶ月</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sys_placement_flag__c</fullName>
        <label>【非表示】就職決定フラグ</label>
        <summaryFilterItems>
            <field>follow_SFO__c.result__c</field>
            <operation>equals</operation>
            <value>採用</value>
        </summaryFilterItems>
        <summaryForeignKey>follow_SFO__c.staff__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sys_scheduled_joined_date__c</fullName>
        <label>【非表示】就職決定日</label>
        <summarizedField>follow_SFO__c.scheduled_joined_date__c</summarizedField>
        <summaryFilterItems>
            <field>follow_SFO__c.result__c</field>
            <operation>equals</operation>
            <value>採用</value>
        </summaryFilterItems>
        <summaryForeignKey>follow_SFO__c.staff__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Toal_OverTime_Hour__c</fullName>
        <label>合計残業時間</label>
        <summarizedField>timecard_SFO__c.zangyou__c</summarizedField>
        <summaryForeignKey>timecard_SFO__c.staff__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_OverTime_18__c</fullName>
        <label>合計残業時間（18時以降）</label>
        <summarizedField>timecard_SFO__c.zangyo_time_18pm__c</summarizedField>
        <summaryForeignKey>timecard_SFO__c.staff__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>address2__c</fullName>
        <label>住所2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>住所1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>age__c</fullName>
        <formula>IF( DATE( 2000, MONTH( birthday__c) , DAY( birthday__c) ) &lt;= DATE ( 2000, MONTH(TODAY()) , DAY(TODAY()) ) , YEAR( TODAY() ) - YEAR( birthday__c ) , YEAR( TODAY() ) - YEAR( birthday__c ) - 1 )</formula>
        <label>（未使用）年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>birthday__c</fullName>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect_memo__c</fullName>
        <label>回収書類備考</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>confirmedTEL__c</fullName>
        <label>入社案内確認TEL</label>
        <picklist>
            <picklistValues>
                <fullName>○</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>留守電</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不出</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>×</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>contract_OJT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>有期雇用契約書（OJT）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>contract_OffJT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>有期雇用契約書（OffJT）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filing_chosashodaku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>⑧調査協力承諾書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filing_fuyokojo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>①扶養控除申告書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filing_kojinjoho__c</fullName>
        <defaultValue>false</defaultValue>
        <label>⑦個人情報提供依頼書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filing_koza__c</fullName>
        <defaultValue>false</defaultValue>
        <label>②銀行口座届出書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filing_nenkin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>③基礎年金番号・雇保被保険者番号確認書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filing_seiyaku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>⑤承諾書及び誓約書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filing_senseisyo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>⑥宣誓書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filing_tukin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>④通勤交通費申請書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fname_kana__c</fullName>
        <label>名（カナ）</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hourlyrate_OJT__c</fullName>
        <label>時間単価(OJT)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>hourlyrate_OffJT__c</fullName>
        <label>時間単価(OffJT)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jobobjective__c</fullName>
        <label>職種</label>
        <picklist>
            <picklistValues>
                <fullName>営業・市場調査コース</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ホームページ作成</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>英文事務・翻訳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中国語翻訳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>障害者枠</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>joined_day__c</fullName>
        <label>入社日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>latest_follow__c</fullName>
        <label>・最終フォロー</label>
        <summarizedField>follow_SFO__c.contact_date__c</summarizedField>
        <summaryForeignKey>follow_SFO__c.staff__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>leader__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>リーダーにはチェックを入れること</inlineHelpText>
        <label>リーダー</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leaflet_send__c</fullName>
        <label>入社案内送付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>line__c</fullName>
        <label>路線</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lname_kana__c</fullName>
        <label>姓（カナ）</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>logicaldelete_date__c</fullName>
        <inlineHelpText>退職日は最終出勤日を指します。訓練期間中に就職が決まった場合、こちらに最終出勤日を入力し、かつ就職状況の「就職決定」にチェックを入れてください。</inlineHelpText>
        <label>退職日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>logicaldelete_reason__c</fullName>
        <inlineHelpText>就職決定の場合は「就職状況」オブジェクトに登録すること</inlineHelpText>
        <label>退職理由</label>
        <picklist>
            <picklistValues>
                <fullName>体調不良</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>本人都合</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>next_follow_date__c</fullName>
        <formula>IF ( AND ( TEXT (staffstatus__c ) &lt;&gt; &apos;求職中&apos; , TEXT ( staffstatus__c ) &lt;&gt; &apos;就職未決定&apos; ) , NULL ,  IF ( ISNULL ( latest_follow__c ) = TRUE , DATE ( YEAR ( OJTend__c ) , MONTH ( OJTend__c ) + 2 , 1 ) - 1, Sys_next_follow_limit__c ) )</formula>
        <inlineHelpText>最終フォローの翌月末を算出してます。この日付を使って、Viewで検索できたりします。尚、訓練期間後でないと表示しません。</inlineHelpText>
        <label>・次回フォロー予定</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>phone1__c</fullName>
        <label>電話番号1</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone2__c</fullName>
        <label>電話番号2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>postalcode__c</fullName>
        <inlineHelpText>郵便番号にはハイフンをつけないでください</inlineHelpText>
        <label>郵便番号</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purestaffcode__c</fullName>
        <externalId>true</externalId>
        <label>PUREスタッフコード</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>salary_receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>給与受領書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sex__c</fullName>
        <label>性別</label>
        <picklist>
            <picklistValues>
                <fullName>女</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>男</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>staffentrydate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>SFDC登録日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>staffstatus__c</fullName>
        <label>現在状況</label>
        <picklist>
            <picklistValues>
                <fullName>入社前</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OffJT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OJT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>求職中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>就職決定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>就職未決定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>退職など</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>states__c</fullName>
        <label>都道府県</label>
        <picklist>
            <picklistValues>
                <fullName>北海道</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>青森県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>岩手県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宮城県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>秋田県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>山形県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福島県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>茨城県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>栃木県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>群馬県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>埼玉県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>千葉県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>東京都</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>神奈川県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>新潟県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>富山県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>石川県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福井県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>山梨県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>長野県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>岐阜県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>静岡県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>愛知県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>三重県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>滋賀県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>京都府</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>大阪府</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>兵庫県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>奈良県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>和歌山県</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>station__c</fullName>
        <label>最寄駅</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>所属チーム</label>
        <referenceTo>team_SFO__c</referenceTo>
        <relationshipName>staff_team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>trafficfee__c</fullName>
        <label>通勤交通費（月額）</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>traineeage__c</fullName>
        <label>年齢</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>traineetype__c</fullName>
        <label>訓練生内訳</label>
        <picklist>
            <picklistValues>
                <fullName>新卒学生</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>社会人歴有（正社員）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>社会人歴有（非正規社員）</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>trainingterm__c</fullName>
        <label>訓練期間</label>
        <picklist>
            <picklistValues>
                <fullName>第1期</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>第2期</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>第3期</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>第4期</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>訓練生</label>
    <listViews>
        <fullName>No_1_term_staff_list</fullName>
        <columns>staffstatus__c</columns>
        <columns>purestaffcode__c</columns>
        <columns>NAME</columns>
        <columns>team__c</columns>
        <columns>leader__c</columns>
        <columns>phone1__c</columns>
        <columns>jobobjective__c</columns>
        <columns>OffJTstart__c</columns>
        <columns>OffJTend__c</columns>
        <columns>OJTstart__c</columns>
        <columns>OJTend__c</columns>
        <columns>hourlyrate_OffJT__c</columns>
        <columns>hourlyrate_OJT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>trainingterm__c</field>
            <operation>equals</operation>
            <value>第1期</value>
        </filters>
        <label>第1期訓練生リスト</label>
    </listViews>
    <listViews>
        <fullName>No_2_term_staff_list</fullName>
        <columns>staffstatus__c</columns>
        <columns>purestaffcode__c</columns>
        <columns>NAME</columns>
        <columns>team__c</columns>
        <columns>leader__c</columns>
        <columns>phone1__c</columns>
        <columns>jobobjective__c</columns>
        <columns>OffJTstart__c</columns>
        <columns>OffJTend__c</columns>
        <columns>OJTstart__c</columns>
        <columns>OJTend__c</columns>
        <columns>hourlyrate_OffJT__c</columns>
        <columns>hourlyrate_OJT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>trainingterm__c</field>
            <operation>equals</operation>
            <value>第2期</value>
        </filters>
        <label>第2期訓練生リスト</label>
    </listViews>
    <listViews>
        <fullName>Team_Undetermined_list</fullName>
        <columns>staffstatus__c</columns>
        <columns>purestaffcode__c</columns>
        <columns>NAME</columns>
        <columns>leader__c</columns>
        <columns>phone1__c</columns>
        <columns>jobobjective__c</columns>
        <columns>OffJTstart__c</columns>
        <columns>OffJTend__c</columns>
        <columns>OJTstart__c</columns>
        <columns>OJTend__c</columns>
        <columns>hourlyrate_OffJT__c</columns>
        <columns>hourlyrate_OJT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>team__c</field>
            <operation>equals</operation>
        </filters>
        <label>チーム未決定者リスト</label>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>staffstatus__c</columns>
        <columns>purestaffcode__c</columns>
        <columns>NAME</columns>
        <columns>team__c</columns>
        <columns>leader__c</columns>
        <columns>phone1__c</columns>
        <columns>jobobjective__c</columns>
        <columns>OffJTstart__c</columns>
        <columns>OffJTend__c</columns>
        <columns>OJTstart__c</columns>
        <columns>OJTend__c</columns>
        <columns>hourlyrate_OffJT__c</columns>
        <columns>hourlyrate_OJT__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>collect_check</fullName>
        <columns>trainingterm__c</columns>
        <columns>team__c</columns>
        <columns>NAME</columns>
        <columns>filing_fuyokojo__c</columns>
        <columns>filing_koza__c</columns>
        <columns>filing_nenkin__c</columns>
        <columns>filing_tukin__c</columns>
        <columns>filing_seiyaku__c</columns>
        <columns>filing_senseisyo__c</columns>
        <columns>filing_kojinjoho__c</columns>
        <columns>filing_chosashodaku__c</columns>
        <columns>contract_OffJT__c</columns>
        <columns>contract_OJT__c</columns>
        <columns>salary_receipt__c</columns>
        <columns>collect_memo__c</columns>
        <filterScope>Everything</filterScope>
        <label>回収物チェック</label>
    </listViews>
    <nameField>
        <label>氏名</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA0000001twkSMAQ_00NA0000007QGEvMAO</fullName>
        <active>true</active>
        <errorMessage>所属チーム員のリーダーからしか選択できません</errorMessage>
        <field>team_SFO__c.teamleader__c</field>
        <filterItems>
            <field>staff_SFO__c.leader__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>staff_SFO__c.team__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>team_チームリーダー</name>
        <sourceObject>team_SFO__c</sourceObject>
    </namedFilters>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DC_delete_date_after_OffJTstart</fullName>
        <active>true</active>
        <errorConditionFormula>logicaldelete_date__c  &lt;  OffJTstart__c</errorConditionFormula>
        <errorDisplayField>logicaldelete_date__c</errorDisplayField>
        <errorMessage>退職日は訓練期間中のみ登録できます。OffJT開始前に退職する場合は、スタッフ情報そのものを削除してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DC_delete_date_before_OJTend</fullName>
        <active>true</active>
        <errorConditionFormula>logicaldelete_date__c  &gt; OJTend__c</errorConditionFormula>
        <errorDisplayField>logicaldelete_date__c</errorDisplayField>
        <errorMessage>退職日は訓練期間中のみ登録できます。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DC_trainingterm</fullName>
        <active>true</active>
        <errorConditionFormula>OR ( OffJTstart__c &gt;= OffJTend__c , OffJTend__c &gt;= OJTstart__c , OJTstart__c &gt;= OJTend__c )</errorConditionFormula>
        <errorDisplayField>OJTstart__c</errorDisplayField>
        <errorMessage>OffJT開始日＜OffJT終了日＜OJT開始日＜OJT終了日となります</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGblank_delete_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Sys_placement_flag__c &gt; 0 , ISNULL(logicaldelete_date__c) = TRUE ,  Sys_scheduled_joined_date__c &gt;=  OffJTstart__c , Sys_scheduled_joined_date__c &lt;=  OJTend__c )</errorConditionFormula>
        <errorDisplayField>logicaldelete_date__c</errorDisplayField>
        <errorMessage>訓練中に就職決定した場合、先に退職日（最終出勤日）を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check_postalcode</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(purestaffcode__c) = FALSE , OR ( ISNUMBER(purestaffcode__c) = FALSE , LEN(purestaffcode__c) &lt;&gt; 7 ) )</errorConditionFormula>
        <errorDisplayField>purestaffcode__c</errorDisplayField>
        <errorMessage>スタッフコードは、7桁数値で入力してください</errorMessage>
    </validationRules>
</CustomObject>